tests/input/conf/invalid/invalid8.cnf
[server]
ip = 127.0.0.1
port = 53

[zone]
name = abc
path = input/zones/invalid/invalid4.zone
